# academic-website

./: .gitattributes  .gitignore  Compiler.hs  Navigation.hs  Posts.hs  about.tex  contactme.md  deploy.sh  index.html  index.tex  personal.bib  publications.html  rollen-academic-site.cabal  site.hs  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
css/: bootstrap.css  rollends.ca.css
images/: rollen-128.xcf
images/genshin-puzzle/: puzzle-diagram.cdr
images/rna-part-2/: Makefile  graphstyle.sty  reddit-graph-directed-users-1.tex  reddit-graph-directed-users-full.tex  reddit-graph-directed.tex  reddit-graph.tex
posts/: 2018-07-09-redditnetworkanalysis.tex  2018-07-12-redditnetworkanalysispart1.tex  2018-07-26-redditnetworkanalysispart2.tex  2020-12-30-fourierseries.tex  2021-02-15-heavisidecoverup.tex  2021-04-22-samplingonmanifolds.tex  2021-04-23-samplingmanifolds-part-2.tex  2021-05-08-equivalence.tex  2021-05-09-equivalence-part-2.tex  2021-07-18-linearpdes.tex  2021-07-28-linearpdes-part-2.tex  2021-12-31-thewishsystem.md  2022-10-26-newton.md  2022-12-28-control-network.md  2023-01-05-control-network.md  2024-06-23-groups-actions-puzzles.md  equivalence.bib  redditnetworkanalysis.bib
posts/equivalence/: controllabilitylinear.m
posts/fourierseries/: complex.m  simple.m
posts/linearpdes/: Bump.m  contoursAnalytic.fig  contoursH.fig  dBump.m  simH.m  simH2.m  uniqueness_pde.nb
posts/samplingmanifold/: bettersamplesphere.m  poorlysamplesphere.m  (+1 more)
templates/: archive.html  default.html  post-list.tex  post.html
webroot/: robots.txt
(+11 files in other folders)
