name:               rollen-academic-site
version:            0.4.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:
    Compiler,
    Navigation,
    Posts,
    Paths_rollen_academic_site
  build-depends:    base == 4.*
                  , hakyll == 4.*
                  , pandoc == 3.*
                  , text
                  , containers
                  , cryptonite
                  , citeproc
                  , memory
                  , bytestring
                  , base64-bytestring
                  , utf8-string
  ghc-options:      -threaded
  default-language: Haskell2010
